2016-10-23  Eric Herman <eric@freesa.org>

	add "ehbi_bytes_shift_left" function, improve division

	division is now implemented using a "long divsion" approach

	* src/ehbigint.h: add ehbi_bytes_shift_left
	* src/ehbigint.c: ehbi_bytes_shift_left, improve divsion

2016-10-22  Eric Herman <eric@freesa.org>

	* src/ehbigint.c: avoid indexing outside of the array
	* Makefile.am: less verbose valgrind (add "-q")

2016-10-05  Eric Herman <eric@freesa.org>

	* Makefile.old: not needed any more

2016-10-05  Eric Herman <eric@freesa.org>

	License files tidy (LGPLv3+), to make it more github friendly

	* COPYING: replace boilerplate LGPLv3+ with misc/lgpl-3.0.txt
	* README: remove reference to misc/
	* Makefile.am: replace misc/ with COPYING.GPL3
	* misc/gpl-3.0.txt: renamed to COPYING.GPL3
	* misc/lgpl-3.0.txt: renamed to COPYING
	* COPYING.GPL3: renamed from misc/gpl-3.0.txt

2016-06-19  Eric Herman <eric@freesa.org>

	* COPYING: boilerplate LGPLv3+
	* README: reference misc/
	* Makefile.am: include misc/
	* COPYING.GPL3: renamed misc/gpl-3.0.txt
	* COPYING.LGPL3: renamed misc/lgpl-3.0.txt

2016-06-07  Eric Herman <eric@freesa.org>

	malloc -> ehbi_stack_alloc for debug string buf
	cleanup includes in tests, and tests LDADDs

2016-05-22  Eric Herman <eric@freesa.org>

	ensure tests do not return values out of range
	or (mod 256 == EXIT_SUCCESS)

2016-05-21  Eric Herman <eric@freesa.org>

	add "demo" and "valgrind" targets

2016-05-18  Eric Herman <eric@freesa.org>

	seems to be mostly working with autotools

	* ChangeLog: Freshly created ChangeLog.